--- a/src/app/workdays-list/workdays-list.component.html
+++ b/src/app/workdays-list/workdays-list.component.html
@@ -1,3 +1,8 @@
-<ul *ngIf="workdays$ | async as workdays;">
-  <li *ngFor="let workDay of workdays">{{ workDay.date }}</li>
-</ul>
+<div class="container mx-auto" *ngIf="workdays$ | async as workdays;" style="max-width: 600px;">
+
+  <app-workday-form (submitForm)="addWorkday($event)"></app-workday-form>
+  <app-workday *ngFor="let workDay of workdays" [workday]="workDay"
+               (deleteWorkday)="onDeleteWorkday($event)"></app-workday>
+
+</div>
+
