--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar (toggleForm)="setToggleForm()"></app-navbar>
 
-<app-workdays-list *ngIf="auth.user$ | async as user;"></app-workdays-list>
+<app-workdays-list [showForm] *ngIf="auth.user$ | async as user;"></app-workdays-list>
 
