--- a/src/app/workdays-list/workday-form/workday-form.component.html
+++ b/src/app/workdays-list/workday-form/workday-form.component.html
@@ -1,5 +1,5 @@
-<form class="p-8 mb-4 bg-white rounded shadow-md" [formGroup]="form" (ngSubmit)="onSubmit()">
-  <h2 class="mb-4 text-xl font-medium ">Nieuwe werkdag</h2>
+<form class="p-8 mb-4 bg-white rounded shadow-md" [formGroup]="form" (ngSubmit)="onSubmit()" *ngIf="showForm">
+  <h2 class="mb-4 text-2xl font-medium ">Nieuwe werkdag</h2>
   <div class="input-group mb-4">
     <label for="date" class="mb-1 block font-bold text-gray-500 uppercase">Datum</label>
     <input id="date" class="form-input rounded-lg border-primary-light w-full" type="date" name="date"
