--- a/src/app/workdays-list/workday/workday.component.html
+++ b/src/app/workdays-list/workday/workday.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-white rounded-sm p-4 shadow-xl border-green-500 border-t-4 my-4">
+<div class="card my-4 p-4 bg-white rounded shadow-xl border-green-500 border-t-4">
   <div class="card-body">
     <div class="card-title font-bold flex justify-between">
       <span>{{ workday.date | date: 'fullDate':'GMT+2':'nl_NL'  }}</span><span (click)="onDelete(workday)">x</span>
