--- a/src/app/workdays-list/workdays-list.component.html
+++ b/src/app/workdays-list/workdays-list.component.html
@@ -1,4 +1,4 @@
-<app-workday-form (submitForm)="addWorkday($event)"></app-workday-form>
+<app-workday-form (submitForm)="addWorkday($event)" [showForm]="showForm"></app-workday-form>
 
 <div class="container mx-auto" *ngIf="workdays$ | async as workdays;" style="max-width: 600px;">
   <app-workday *ngFor="let workDay of workdays" [workday]="workDay"
