--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,8 +5,9 @@
      backgroundRepeat: 'no-repeat'}">
   <div class="self-center text-white font-bold text-2xl">Jourly</div>
   <div class="flex self-center">
-    <button class="px-4 py-2 mr-4 rounded bg-indigo-600 text-white font-semibold shadow"
-            (click)="onToggleForm()">Nieuwe
+    <button
+      class="px-4 py-2 mr-4 rounded text-indigo-600 hover:shadow-xl bg-white hover:bg-indigo-100 focus:bg-indigo-200 font-semibold shadow"
+      (click)="onToggleForm()">Nieuwe
       werkdag
     </button>
     <img *ngIf="auth.user$ | async as user; else notLoggedIn;" [src]="user.photoURL"
