--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
   <div class="self-center text-white font-bold text-2xl">Jourly</div>
   <div class="flex self-center">
     <button
-      class="px-4 py-2 mr-4 rounded text-indigo-600 hover:shadow-xl bg-white hover:bg-indigo-100 focus:bg-indigo-200 font-semibold shadow"
+      class="px-4 py-2 mr-4 rounded text-indigo-600 hover:shadow-xl bg-white hover:bg-indigo-100 focus:bg-indigo-200 font-semibold shadow border-b-4 border-indigo-400"
       (click)="onToggleForm()">Nieuwe
       werkdag
     </button>
