--- a/src/app/workdays-list/workday-form/workday-form.component.html
+++ b/src/app/workdays-list/workday-form/workday-form.component.html
@@ -8,7 +8,7 @@
       <input id="date" class="form-input rounded-lg border-primary-light w-full" type="date" name="date"
              [value]="date | date:'yyyy-MM-dd'"
              formControlName="date">
-      <span *ngIf="!form.get('date').valid && form.get('date').touched"
+      <span *ngIf="!form.get('date').valid"
             class="validation-block">Dit veld is verplicht!</span>
     </div>
     <div class="input-group mb-4">
