--- a/src/app/workdays-list/workdays-list.component.html
+++ b/src/app/workdays-list/workdays-list.component.html
@@ -1,7 +1,9 @@
 <app-workday-form (submitForm)="addWorkday($event)" *ngIf="showForm"></app-workday-form>
 
 <div class="container mx-auto" *ngIf="workdays$ | async as workdays;" style="max-width: 600px;">
-  <app-workday *ngFor="let workDay of workdays" [workday]="workDay"
-               (deleteWorkday)="onDeleteWorkday($event)"></app-workday>
+  <app-workday *ngFor="let workday of workdays" [workday]="workday" (showModal)="onShowModal(workday)"
+  ></app-workday>
+  <app-modal *ngIf="showDeleteWorkdayModal" (accepted)="onDeleteWorkday(toDeleteWorkday)" [workday]="toDeleteWorkday"
+             (closed)="onClose()"></app-modal>
 </div>
 
