--- a/src/app/workdays-list/workday/workday.component.html
+++ b/src/app/workdays-list/workday/workday.component.html
@@ -1,4 +1,4 @@
-<div class="card my-10 pt-4 bg-white rounded-b-lg shadow hover:shadow-2xl border-green-500 border-l-4"
+<div class="card my-10 pt-4 bg-white rounded-b-lg shadow hover:shadow-2xl border-indigo-300 border-l-4"
      style="transition: .2s ease-in-out;">
   <div class="card-body">
     <div class="card-title px-8 text-xl font-bold flex justify-between">
@@ -9,7 +9,7 @@
     <div class="description px-8 pt-4 pb-8 markdown-body" [innerHTML]="parsedDescription"
          style="color: #2D3748;">
     </div>
-    <div class="bottom-bar bg-gray-200 px-8 py-4 text-right">
+    <div class="bottom-bar bg-indigo-100 px-8 py-4 text-right">
       <span class="font-semibold cursor-pointer text-gray-600 hover:text-gray-800"
             style="transition: .2s ease-in-out;"
             (click)="onShowModal(workday)">Delete</span>
