--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,6 +5,10 @@
      backgroundRepeat: 'no-repeat'}">
   <div class="self-center text-white font-bold text-2xl">Jourly</div>
   <div class="flex self-center">
+    <a [href]="latestCommit.url" class="mr-4 self-center text-indigo-100 font-semibold"
+       *ngIf="latestCommit$ | async as latestCommit">
+      <pre>{{ latestCommit.sha }} - {{ latestCommit.message }}</pre>
+    </a>
     <button
       class="px-4 py-2 mr-4 rounded text-indigo-600 hover:shadow-xl bg-white hover:bg-indigo-100 focus:bg-indigo-200 font-semibold shadow border-b-4 border-indigo-400"
       (click)="onToggleForm()">Nieuwe
