WIP: editing workdays

--- a/src/app/workdays-list/workday/workday.component.html
+++ b/src/app/workdays-list/workday/workday.component.html
@@ -10,6 +10,9 @@
          style="color: #2D3748;">
     </div>
     <div class="bottom-bar bg-indigo-100 px-8 py-4 text-right">
+      <span class="font-semibold cursor-pointer text-gray-600 hover:text-gray-800 mr-4"
+            style="transition: .2s ease-in-out;"
+            (click)="onEditWorkDay(workday)">Edit</span>
       <span class="font-semibold cursor-pointer text-gray-600 hover:text-gray-800"
             style="transition: .2s ease-in-out;"
             (click)="onShowModal(workday)">Delete</span>
